k8s/platform/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ranch-admin
  namespace: platform
spec:
  selector:
    app: ranch-admin
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
